# grun

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
Assets/: AppIcon.psd
packaging/: build-deb.sh  org.grun.Launcher.desktop
src/: config.rs  main.rs  matching.rs  state.rs  text.rs
src/providers/: ai.rs  apps.rs  calc.rs  claude.rs  command.rs  files.rs  google.rs  mod.rs  power.rs  search.rs
